--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -31,3 +31,18 @@
 		</form>
   </div>
 </nav>
+
+<main>
+  <% @posts.each do |post| %>
+    <div class="card" style="width: 18rem;">
+      
+      <img src="assets/images/アンケートシート.png" class="card-img-top" alt="アンケートシート">
+      <div class="card-body">
+        <h5 class="card-title"><%= post.name %></h5>
+        <p class="card-text">好きな果物 <%=post.like %></p>
+        <p class="card-text">嫌いな果物 <%=post.hate %></p>
+        <p class="card-text">満足度 <%=post.satisfaction %></p>
+      </div>
+    </div>
+  <% end %>
+</main>
