timesカラムを保存できるようにストロングパラメーターを変更

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -41,6 +41,7 @@
           <h5 class="card-title"><%= post.name %></h5>
           <p class="card-text">好きな果物 <%=post.like %></p>
           <p class="card-text">嫌いな果物 <%=post.hate %></p>
+          <p class="card-text">回数 <%=post.times %></p>
           <p class="card-text">満足度 <%=post.satisfaction %></p>
         </div>
       </div>
