--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,9 +9,18 @@
         <li class="nav-item">
 					<%= link_to "投稿", new_post_path, class: "nav-link" %>
         </li>
-        <li class="nav-item">
-          <%= link_to "サンプル2", "#", class: "nav-link" %>
-        </li>
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link" %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "新規登録", new_user_registration_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "ログイン", new_user_session_path, class: "nav-link" %>
+          </li>
+        <% end %>
         <li class="nav-item">
           <%= link_to "サンプル3", "#", class: "nav-link" %>
         </li>
